RESOLVED FIXED118063
Functions created from source are not reported to the debugger
https://bugs.webkit.org/show_bug.cgi?id=118063
Summary Functions created from source are not reported to the debugger
Timothy Hatcher
Reported 2013-06-26 08:26:41 PDT
Given the following script: var f = new Function("a", "b", "return a + b"); f(2, 3); The source code for the function will not be reported to the Debugger::sourceParsed callback and will not be visible to the Web Inspector. This also happens does not happen for functions created by WebCore::JSLazyEventListener. <rdar://problem/12679475>
Attachments
Patch (1.73 KB, patch)
2013-06-26 08:30 PDT, Timothy Hatcher
ggaren: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion (594.79 KB, application/zip)
2013-06-26 13:08 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 (561.53 KB, application/zip)
2013-06-26 18:00 PDT, Build Bot
no flags
Timothy Hatcher
Comment 1 2013-06-26 08:30:00 PDT
Geoffrey Garen
Comment 2 2013-06-26 08:40:02 PDT
Comment on attachment 205497 [details] Patch Can we test this with an inspector test?
Timothy Hatcher
Comment 3 2013-06-26 08:43:00 PDT
(In reply to comment #2) > (From update of attachment 205497 [details]) > Can we test this with an inspector test? Probably, but the Inspector tests use the old Inspector. We will be redoing that soon to use the new front-end but it will require most tests to be replaced. I'd rather not add new Inspector tests until that happens.
Build Bot
Comment 4 2013-06-26 13:08:02 PDT
Comment on attachment 205497 [details] Patch Attachment 205497 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/930508 New failing tests: inspector/debugger/debugger-script-preprocessor.html
Build Bot
Comment 5 2013-06-26 13:08:03 PDT
Created attachment 205518 [details] Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Build Bot
Comment 6 2013-06-26 18:00:06 PDT
Comment on attachment 205497 [details] Patch Attachment 205497 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/988028 New failing tests: inspector/debugger/debugger-script-preprocessor.html
Build Bot
Comment 7 2013-06-26 18:00:09 PDT
Created attachment 205549 [details] Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Timothy Hatcher
Comment 8 2013-06-27 04:04:28 PDT
Note You need to log in before you can comment on or make changes to this bug.