Notify the debugger about functions created from source code via new Function() or WebCore::JSLazyEventListener.

https://bugs.webkit.org/show_bug.cgi?id=118063

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

* bytecode/UnlinkedCodeBlock.cpp:
(JSC::UnlinkedFunctionExecutable::fromGlobalCode): Call Debugger::sourceParsed.

LayoutTests:

* inspector/debugger/debugger-script-preprocessor-expected.txt: Updated.

Canonical link: https://commits.webkit.org/136170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152091 268f45cc-cd09-0410-ab3c-d52691b4dbfc